welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: not a legal formal parameter
if(talking==true && hour =>20)
                 ^